Spacing fix for resume section

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,7 @@
 .importantTextArea{
   text-align: center;
 }
+
+canvas{
+  margin: 0 auto;
+}
